# Social-Gaming-Platform

./: .gitignore
lib/web-socket-networking/lib/: CMakeLists.txt
lib/web-socket-networking/lib/Game/: CMakeLists.txt  Game.cpp
lib/web-socket-networking/lib/Game/include/: Game.h
lib/web-socket-networking/lib/GameConfig/: CMakeLists.txt
lib/web-socket-networking/lib/GameConfig/include/: GameConfig.h  Setup.h
lib/web-socket-networking/lib/GameSession/: CMakeLists.txt  GameSession.cpp
lib/web-socket-networking/lib/GameSession/include/: GameSession.h
lib/web-socket-networking/lib/Rule/: CMakeLists.txt  Rule.cpp
lib/web-socket-networking/lib/Rule/include/: Rule.h
lib/web-socket-networking/lib/Rules/ControlStructures/ParallelFor/: ParallelFor.cpp
lib/web-socket-networking/lib/Rules/ListOperations/Deal/include/: Deal.h
lib/web-socket-networking/lib/Rules/Output/GlobalMessage/: GlobalMessage.cpp
lib/web-socket-networking/lib/Rules/Timing/Timer/: Timer.cpp
lib/web-socket-networking/lib/VarPool/: VarPool.cpp
lib/web-socket-networking/lib/VarPool/include/: VarPool.h
lib/web-socket-networking/lib/networking/: CMakeLists.txt
lib/web-socket-networking/lib/networking/include/: CommandHandler.h
lib/web-socket-networking/lib/networking/src/: Client.cpp  CommandHandler.cpp
lib/web-socket-networking/lib/users/: CMakeLists.txt  users.cpp
lib/web-socket-networking/lib/users/include/: users.h
lib/web-socket-networking/tools/chatserver/: chatserver.cpp
test/: CMakeLists.txt  GameConfigTest.cpp  VarPoolTest.cpp  jsonToGame.cpp  testGame.json  user_test.cpp
(+12 files in other folders)
